--- a/Experiments/sandbox.ipynb
+++ b/Experiments/sandbox.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5d506f33-f0ee-4fd8-bc91-ba1db27a8eb4",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "6666be88-fd94-43f3-af87-903d6f313aa3",
    "metadata": {},
    "outputs": [
@@ -67,40 +67,149 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据形状: (100, 1461)\n",
-      "数据内容:\n",
-      " [[ 9.         -0.57796699 -0.57796699 ... -0.57796699  1.7167429\n",
-      "  -0.57796699]\n",
-      " [ 9.         -0.58857465 -0.58857465 ... -0.55418975  1.7424324\n",
-      "  -0.58843008]\n",
-      " [ 9.         -0.58289722 -0.57376097 ... -0.55343748  1.72404\n",
-      "  -0.58268133]\n",
-      " ...\n",
-      " [ 1.         -0.9970767   0.10875577 ...  0.10667751  1.5893167\n",
-      "  -0.69593052]\n",
-      " [ 1.         -0.8915895  -0.75293965 ...  0.48176942  1.4314065\n",
-      "  -0.74713243]\n",
-      " [ 1.         -0.84586812 -0.65071132 ...  0.43490056  1.5531319\n",
-      "  -0.64664617]]\n"
+      "(100, 1460, 1)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[-0.58475375],\n",
+       "         [-0.58475375],\n",
+       "         [ 1.730991  ],\n",
+       "         ...,\n",
+       "         [-0.5786034 ],\n",
+       "         [ 1.7327257 ],\n",
+       "         [-0.58473404]],\n",
+       " \n",
+       "        [[-0.59143435],\n",
+       "         [-0.51110416],\n",
+       "         [ 1.7268197 ],\n",
+       "         ...,\n",
+       "         [-0.58073052],\n",
+       "         [ 1.7273961 ],\n",
+       "         [-0.58073052]],\n",
+       " \n",
+       "        [[-0.57794535],\n",
+       "         [-0.57794535],\n",
+       "         [ 1.7307931 ],\n",
+       "         ...,\n",
+       "         [-0.5497977 ],\n",
+       "         [ 1.7347268 ],\n",
+       "         [-0.57775109]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[-0.99827705],\n",
+       "         [ 0.10246194],\n",
+       "         [ 1.6069248 ],\n",
+       "         ...,\n",
+       "         [ 0.09938861],\n",
+       "         [ 1.5636906 ],\n",
+       "         [-0.69265292]],\n",
+       " \n",
+       "        [[-0.94147312],\n",
+       "         [ 0.58721361],\n",
+       "         [ 1.5236441 ],\n",
+       "         ...,\n",
+       "         [ 0.58223019],\n",
+       "         [ 1.5482239 ],\n",
+       "         [-0.64529199]],\n",
+       " \n",
+       "        [[-0.66153552],\n",
+       "         [-0.66153552],\n",
+       "         [ 1.5103272 ],\n",
+       "         ...,\n",
+       "         [-0.66053949],\n",
+       "         [ 1.5101048 ],\n",
+       "         [-0.66068454]]]),\n",
+       " array([9., 9., 9., 9., 9., 9., 9., 9., 9., 9., 3., 3., 3., 3., 3., 3., 3.,\n",
+       "        3., 3., 3., 4., 4., 4., 4., 4., 4., 4., 4., 4., 4., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 6., 6., 6., 6., 6., 6., 6., 6., 6., 6., 5.,\n",
+       "        5., 5., 5., 5., 5., 5., 5., 5., 5., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
+       "        2., 2., 8., 8., 8., 8., 8., 8., 8., 8., 8., 8., 7., 7., 7., 7., 7.,\n",
+       "        7., 7., 7., 7., 7., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),\n",
+       " array([[-0.57796699, -0.57796699,  1.7381622 , ..., -0.57796699,\n",
+       "          1.7167429 , -0.57796699],\n",
+       "        [-0.58857465, -0.58857465,  1.7231335 , ..., -0.55418975,\n",
+       "          1.7424324 , -0.58843008],\n",
+       "        [-0.58289722, -0.57376097,  1.7534016 , ..., -0.55343748,\n",
+       "          1.72404   , -0.58268133],\n",
+       "        ...,\n",
+       "        [-0.9970767 ,  0.10875577,  1.5859634 , ...,  0.10667751,\n",
+       "          1.5893167 , -0.69593052],\n",
+       "        [-0.8915895 , -0.75293965,  1.4242306 , ...,  0.48176942,\n",
+       "          1.4314065 , -0.74713243],\n",
+       "        [-0.84586812, -0.65071132,  1.5612229 , ...,  0.43490056,\n",
+       "          1.5531319 , -0.64664617]]),\n",
+       " array([9., 9., 9., 9., 9., 9., 9., 9., 9., 9., 3., 3., 3., 3., 3., 3., 3.,\n",
+       "        3., 3., 3., 4., 4., 4., 4., 4., 4., 4., 4., 4., 4., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 6., 6., 6., 6., 6., 6., 6., 6., 6., 6., 5.,\n",
+       "        5., 5., 5., 5., 5., 5., 5., 5., 5., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
+       "        2., 2., 8., 8., 8., 8., 8., 8., 8., 8., 8., 8., 7., 7., 7., 7., 7.,\n",
+       "        7., 7., 7., 7., 7., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
     "def ReadTS(name):\n",
     "    data_path = os.path.join(path, f\"Univariate_arff/{name}/{name}_TEST.txt\")\n",
-    "    # 文件路径\n",
-    "    file_path = f\"/Users/gali/Documents/LIMESegment/Univariate_arff/{name}/{name}_TEST.txt\"\n",
     "    \n",
     "    # 读取文件中的数据并存储为 NumPy 数组\n",
-    "    ACSF1_test = np.loadtxt(data_path)\n",
+    "    test = np.loadtxt(data_path)\n",
     "\n",
-    "    # 打印数组的形状和内容（可选）\n",
-    "    print(\"数据形状:\", ACSF1_test.shape)\n",
-    "    print(\"数据内容:\\n\", ACSF1_test)\n",
+    "    data_path = os.path.join(path, f\"Univariate_arff/{name}/{name}_TRAIN.txt\")\n",
+    "    \n",
+    "    train = np.loadtxt(data_path)\n",
     "\n",
-    "ReadTS('ACSF1')"
+    "    #print(\"数据形状:\", ACSF1_test.shape)\n",
+    "    #print(\"数据内容:\\n\", ACSF1_test)\n",
+    "    \n",
+    "    # # 获取第一列\n",
+    "    # first_column = train[:, 0]\n",
+    "    \n",
+    "    # # 统计每个数字的频次\n",
+    "    # unique, counts = np.unique(first_column, return_counts=True)\n",
+    "    \n",
+    "    # # 将结果组合为字典\n",
+    "    # freq_dict = dict(zip(unique, counts))\n",
+    "    \n",
+    "    # print(freq_dict)\n",
+    "    \n",
+    "    # 第一列作为标签 y_train\n",
+    "    y_train = train[:, 0]\n",
+    "    \n",
+    "    # 剩余部分作为特征 x_train\n",
+    "    x_train = train[:, 1:]\n",
+    "    x_train = x_train.reshape((x_train.shape[0], x_train.shape[1], 1))\n",
+    "    print(x_train.shape)\n",
+    "    \n",
+    "    y_test= test[:, 0]\n",
+    "    \n",
+    "    x_test = test[:, 1:]\n",
+    "    \n",
+    "    # print(\"x_train:\\n\", x_train)\n",
+    "    # print(\"y_train:\\n\", y_train)\n",
+    "\n",
+    "    return x_train, y_train, x_test, y_test\n",
+    "\n",
+    "ReadTS('ACSF1')\n",
+    "\n",
+    "    \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792671f2-8d4f-462b-9efd-ef61ff7b1d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
