--- a/Experiments/sandbox.ipynb
+++ b/Experiments/sandbox.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "6666be88-fd94-43f3-af87-903d6f313aa3",
    "metadata": {},
    "outputs": [
@@ -67,89 +67,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100, 1460, 1)\n"
+      "{1.0: 114, 2.0: 91, 3.0: 262}\n",
+      "(467,)\n",
+      "(467, 166, 1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([[[-0.58475375],\n",
-       "         [-0.58475375],\n",
-       "         [ 1.730991  ],\n",
+       "(array([[[ 2.6173319 ],\n",
+       "         [ 3.230977  ],\n",
+       "         [ 2.8508    ],\n",
        "         ...,\n",
-       "         [-0.5786034 ],\n",
-       "         [ 1.7327257 ],\n",
-       "         [-0.58473404]],\n",
+       "         [-1.005866  ],\n",
+       "         [-0.79022051],\n",
+       "         [-0.8463201 ]],\n",
        " \n",
-       "        [[-0.59143435],\n",
-       "         [-0.51110416],\n",
-       "         [ 1.7268197 ],\n",
+       "        [[ 1.9822955 ],\n",
+       "         [ 3.4956068 ],\n",
+       "         [ 3.1081047 ],\n",
        "         ...,\n",
-       "         [-0.58073052],\n",
-       "         [ 1.7273961 ],\n",
-       "         [-0.58073052]],\n",
+       "         [-0.845186  ],\n",
+       "         [-0.58468125],\n",
+       "         [-0.64563684]],\n",
        " \n",
-       "        [[-0.57794535],\n",
-       "         [-0.57794535],\n",
-       "         [ 1.7307931 ],\n",
+       "        [[ 4.8586386 ],\n",
+       "         [ 4.5758307 ],\n",
+       "         [ 4.14975   ],\n",
        "         ...,\n",
-       "         [-0.5497977 ],\n",
-       "         [ 1.7347268 ],\n",
-       "         [-0.57775109]],\n",
+       "         [-0.73030062],\n",
+       "         [-0.46326055],\n",
+       "         [-0.5145763 ]],\n",
        " \n",
        "        ...,\n",
        " \n",
-       "        [[-0.99827705],\n",
-       "         [ 0.10246194],\n",
-       "         [ 1.6069248 ],\n",
+       "        [[ 5.2105854 ],\n",
+       "         [ 4.8390478 ],\n",
+       "         [ 4.4075914 ],\n",
        "         ...,\n",
-       "         [ 0.09938861],\n",
-       "         [ 1.5636906 ],\n",
-       "         [-0.69265292]],\n",
+       "         [-0.59218622],\n",
+       "         [-0.38219181],\n",
+       "         [-0.45793724]],\n",
        " \n",
-       "        [[-0.94147312],\n",
-       "         [ 0.58721361],\n",
-       "         [ 1.5236441 ],\n",
+       "        [[ 1.0372081 ],\n",
+       "         [ 3.5039899 ],\n",
+       "         [ 3.1470819 ],\n",
        "         ...,\n",
-       "         [ 0.58223019],\n",
-       "         [ 1.5482239 ],\n",
-       "         [-0.64529199]],\n",
+       "         [-1.0905219 ],\n",
+       "         [-0.79988862],\n",
+       "         [-0.88711023]],\n",
        " \n",
-       "        [[-0.66153552],\n",
-       "         [-0.66153552],\n",
-       "         [ 1.5103272 ],\n",
+       "        [[ 2.0836382 ],\n",
+       "         [ 3.5073305 ],\n",
+       "         [ 3.116688  ],\n",
        "         ...,\n",
-       "         [-0.66053949],\n",
-       "         [ 1.5101048 ],\n",
-       "         [-0.66068454]]]),\n",
-       " array([9., 9., 9., 9., 9., 9., 9., 9., 9., 9., 3., 3., 3., 3., 3., 3., 3.,\n",
-       "        3., 3., 3., 4., 4., 4., 4., 4., 4., 4., 4., 4., 4., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 6., 6., 6., 6., 6., 6., 6., 6., 6., 6., 5.,\n",
-       "        5., 5., 5., 5., 5., 5., 5., 5., 5., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "        2., 2., 8., 8., 8., 8., 8., 8., 8., 8., 8., 8., 7., 7., 7., 7., 7.,\n",
-       "        7., 7., 7., 7., 7., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),\n",
-       " array([[-0.57796699, -0.57796699,  1.7381622 , ..., -0.57796699,\n",
-       "          1.7167429 , -0.57796699],\n",
-       "        [-0.58857465, -0.58857465,  1.7231335 , ..., -0.55418975,\n",
-       "          1.7424324 , -0.58843008],\n",
-       "        [-0.58289722, -0.57376097,  1.7534016 , ..., -0.55343748,\n",
-       "          1.72404   , -0.58268133],\n",
+       "         [-0.81557137],\n",
+       "         [-0.54351037],\n",
+       "         [-0.60048001]]]),\n",
+       " array([1., 3., 1., 3., 2., 1., 1., 1., 3., 3., 1., 3., 2., 3., 1., 1., 3.,\n",
+       "        3., 3., 3., 2., 3., 3., 2., 2., 1., 3., 3., 2., 3., 3., 1., 1., 3.,\n",
+       "        1., 3., 1., 3., 1., 3., 3., 3., 2., 2., 1., 3., 2., 2., 3., 3., 3.,\n",
+       "        2., 3., 3., 2., 2., 3., 2., 3., 3., 3., 1., 3., 3., 3., 1., 3., 3.,\n",
+       "        3., 3., 2., 3., 1., 2., 1., 2., 3., 3., 3., 3., 1., 1., 3., 3., 3.,\n",
+       "        3., 3., 3., 2., 3., 3., 3., 1., 3., 1., 1., 3., 3., 1., 3., 3., 1.,\n",
+       "        1., 1., 3., 3., 3., 2., 3., 3., 2., 1., 2., 3., 3., 3., 2., 1., 2.,\n",
+       "        1., 3., 1., 1., 3., 2., 3., 3., 2., 3., 1., 3., 3., 1., 3., 3., 3.,\n",
+       "        1., 1., 1., 3., 3., 3., 3., 3., 3., 1., 2., 1., 3., 2., 3., 3., 3.,\n",
+       "        1., 2., 3., 3., 2., 2., 1., 3., 1., 3., 3., 3., 1., 3., 1., 1., 3.,\n",
+       "        2., 1., 3., 3., 3., 3., 3., 1., 3., 1., 2., 3., 2., 3., 3., 2., 2.,\n",
+       "        3., 3., 1., 3., 3., 3., 3., 3., 2., 2., 3., 2., 3., 3., 3., 3., 1.,\n",
+       "        3., 3., 1., 3., 3., 3., 3., 3., 3., 2., 2., 1., 3., 2., 1., 3., 3.,\n",
+       "        2., 3., 1., 3., 3., 2., 1., 3., 1., 3., 2., 3., 1., 3., 2., 2., 3.,\n",
+       "        2., 3., 3., 3., 2., 3., 3., 1., 2., 1., 1., 1., 3., 2., 3., 2., 3.,\n",
+       "        2., 1., 3., 2., 3., 2., 3., 1., 2., 3., 3., 1., 2., 3., 3., 1., 3.,\n",
+       "        3., 2., 1., 3., 1., 3., 2., 3., 1., 3., 3., 3., 1., 1., 3., 2., 3.,\n",
+       "        2., 3., 2., 3., 3., 1., 3., 3., 1., 3., 2., 3., 1., 2., 1., 3., 3.,\n",
+       "        3., 1., 1., 1., 3., 3., 3., 2., 3., 1., 3., 2., 1., 1., 1., 2., 1.,\n",
+       "        1., 3., 3., 3., 3., 3., 3., 2., 2., 2., 3., 3., 2., 3., 3., 1., 1.,\n",
+       "        1., 3., 3., 3., 3., 1., 3., 1., 3., 3., 3., 1., 3., 3., 3., 1., 3.,\n",
+       "        3., 1., 2., 3., 3., 2., 2., 3., 3., 1., 3., 3., 2., 3., 3., 3., 3.,\n",
+       "        1., 2., 3., 3., 1., 3., 3., 1., 3., 3., 3., 3., 1., 3., 3., 3., 3.,\n",
+       "        2., 3., 2., 3., 3., 1., 3., 2., 1., 3., 3., 3., 3., 3., 3., 2., 3.,\n",
+       "        1., 2., 3., 1., 3., 2., 3., 3., 3., 1., 3., 1., 2., 3., 3., 3., 3.,\n",
+       "        3., 3., 3., 1., 1., 3., 3., 3., 3., 3., 2., 1., 2., 3., 1., 1., 1.,\n",
+       "        3., 3., 1., 3., 3., 3., 2., 2., 3., 3., 1., 2., 3., 2., 3., 3., 2.,\n",
+       "        1., 1., 3., 3., 3., 2., 1., 2.]),\n",
+       " array([[ 1.4681592 ,  4.1207808 ,  3.695899  , ..., -0.87593536,\n",
+       "         -0.64017466, -0.7271985 ],\n",
+       "        [ 4.3120322 ,  4.1491459 ,  3.7562155 , ..., -0.7266358 ,\n",
+       "         -0.36264219, -0.43618595],\n",
+       "        [-3.7882556 ,  6.440659  ,  5.1231554 , ..., -0.2283833 ,\n",
+       "         -0.22838334, -0.2283832 ],\n",
        "        ...,\n",
-       "        [-0.9970767 ,  0.10875577,  1.5859634 , ...,  0.10667751,\n",
-       "          1.5893167 , -0.69593052],\n",
-       "        [-0.8915895 , -0.75293965,  1.4242306 , ...,  0.48176942,\n",
-       "          1.4314065 , -0.74713243],\n",
-       "        [-0.84586812, -0.65071132,  1.5612229 , ...,  0.43490056,\n",
-       "          1.5531319 , -0.64664617]]),\n",
-       " array([9., 9., 9., 9., 9., 9., 9., 9., 9., 9., 3., 3., 3., 3., 3., 3., 3.,\n",
-       "        3., 3., 3., 4., 4., 4., 4., 4., 4., 4., 4., 4., 4., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 6., 6., 6., 6., 6., 6., 6., 6., 6., 6., 5.,\n",
-       "        5., 5., 5., 5., 5., 5., 5., 5., 5., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "        2., 2., 8., 8., 8., 8., 8., 8., 8., 8., 8., 8., 7., 7., 7., 7., 7.,\n",
-       "        7., 7., 7., 7., 7., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]))"
+       "        [ 1.3589527 ,  4.0444057 ,  3.6890624 , ..., -0.98797646,\n",
+       "         -0.76516465, -0.84670939],\n",
+       "        [ 1.329768  ,  3.877838  ,  3.4409563 , ..., -0.92575348,\n",
+       "         -0.68708346, -0.7751084 ],\n",
+       "        [ 3.3831824 ,  3.3531706 ,  2.9776575 , ..., -0.91036162,\n",
+       "         -0.57979462, -0.64330045]]),\n",
+       " array([2., 2., 1., ..., 3., 3., 3.]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,19 +189,19 @@
     "    #print(\"数据内容:\\n\", ACSF1_test)\n",
     "    \n",
     "    # # 获取第一列\n",
-    "    # first_column = train[:, 0]\n",
+    "    first_column = train[:, 0]\n",
     "    \n",
     "    # # 统计每个数字的频次\n",
-    "    # unique, counts = np.unique(first_column, return_counts=True)\n",
+    "    unique, counts = np.unique(first_column, return_counts=True)\n",
     "    \n",
     "    # # 将结果组合为字典\n",
-    "    # freq_dict = dict(zip(unique, counts))\n",
+    "    freq_dict = dict(zip(unique, counts))\n",
     "    \n",
-    "    # print(freq_dict)\n",
+    "    print(freq_dict)\n",
     "    \n",
     "    # 第一列作为标签 y_train\n",
     "    y_train = train[:, 0]\n",
-    "    \n",
+    "    print(y_train.shape)\n",
     "    # 剩余部分作为特征 x_train\n",
     "    x_train = train[:, 1:]\n",
     "    x_train = x_train.reshape((x_train.shape[0], x_train.shape[1], 1))\n",
@@ -197,7 +216,7 @@
     "\n",
     "    return x_train, y_train, x_test, y_test\n",
     "\n",
-    "ReadTS('ACSF1')\n",
+    "ReadTS('ChlorineConcentration')\n",
     "\n",
     "    \n",
     "\n"
