--- a/Experiments/records/Background Perturbation Tests Real MiddlePhalanxTW P.ipynb
+++ b/Experiments/records/Background Perturbation Tests Real MiddlePhalanxTW P.ipynb
@@ -127,7 +127,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c9911722",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
